# codecov-test

./: CMakeLists.txt  README.md  a.cpp  a.h  b.cc  b.cpp  b.h  c.cpp  test_my_add.cpp
.github/: codecov.yml
.github/workflows/: CI.yml  main.yml  pr_cov.yml  test.yml
